// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.children="foo" renders correctly 1`] = `
<WithStyles(Button)
  className="Choice-button-1 "
  color="primary"
  onClick={[Function]}
>
  foo
</WithStyles(Button)>
`;

exports[`when props.className="foo" renders correctly 1`] = `
<WithStyles(Button)
  className="Choice-button-1 foo"
  color="primary"
  onClick={[Function]}
/>
`;

exports[`when props={} renders correctly 1`] = `
<WithStyles(Button)
  className="Choice-button-1 "
  color="primary"
  onClick={[Function]}
/>
`;
